google office template

--- a/office_locations.ipynb
+++ b/office_locations.ipynb
@@ -8699,6 +8699,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 220,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv(index=False)\n",
+    "compression_opts = dict(method='zip',\n",
+    "                        archive_name='googdf.csv')  \n",
+    "df.to_csv('df.zip', index=False,\n",
+    "          compression=compression_opts) "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
