playing around google colab

--- a/Financials/Untitled.ipynb
+++ b/Financials/Untitled.ipynb
@@ -563,6 +563,376 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "googleurl2 = 'https://www.statista.com/statistics/267606/quarterly-revenue-of-google/'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>Revenue in million U.S. dollars</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Q4 '20</td>\n",
+       "      <td>56704</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Q3 '20</td>\n",
+       "      <td>46017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Q2 '20</td>\n",
+       "      <td>37998</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Q1 '20</td>\n",
+       "      <td>40975</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Q4 '19</td>\n",
+       "      <td>45812</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Q3 '19</td>\n",
+       "      <td>40225</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Q2 '19</td>\n",
+       "      <td>38674</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Q1 '19</td>\n",
+       "      <td>36032</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Q4 '18</td>\n",
+       "      <td>38998</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Q3 '18</td>\n",
+       "      <td>33594</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Q2 '18</td>\n",
+       "      <td>32512</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Q1 '18</td>\n",
+       "      <td>30996</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Q4 '17</td>\n",
+       "      <td>32192</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Q3 '17</td>\n",
+       "      <td>27470</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Q2 '17</td>\n",
+       "      <td>25913</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Q1 '17</td>\n",
+       "      <td>24618</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>Q4 '16</td>\n",
+       "      <td>25802</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>Q3 '16</td>\n",
+       "      <td>22254</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>Q2 '16</td>\n",
+       "      <td>21315</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>Q1 '16</td>\n",
+       "      <td>20092</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>Q4 '15</td>\n",
+       "      <td>21179</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>Q3 '15</td>\n",
+       "      <td>18534</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>Q2 '15</td>\n",
+       "      <td>17653</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>Q1 '15</td>\n",
+       "      <td>17178</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>Q4 '14</td>\n",
+       "      <td>17997</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>Q3 '14</td>\n",
+       "      <td>16523</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>Q2 '14</td>\n",
+       "      <td>15955</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>Q1 '14</td>\n",
+       "      <td>15420</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>Q4 '13</td>\n",
+       "      <td>15707</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>Q3 '13</td>\n",
+       "      <td>13754</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>Q2 '13</td>\n",
+       "      <td>13107</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>Q1 '13</td>\n",
+       "      <td>12951</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>Q4 '12</td>\n",
+       "      <td>12905</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>Q3 '12</td>\n",
+       "      <td>11526</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>Q2 '12</td>\n",
+       "      <td>10964</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>Q1 '12</td>\n",
+       "      <td>10645</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>Q4 '11</td>\n",
+       "      <td>10584</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>Q3 '11</td>\n",
+       "      <td>9720</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38</th>\n",
+       "      <td>Q2 '11</td>\n",
+       "      <td>9026</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>Q1 '11</td>\n",
+       "      <td>8575</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40</th>\n",
+       "      <td>Q4 '10</td>\n",
+       "      <td>8440</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41</th>\n",
+       "      <td>Q3 '10</td>\n",
+       "      <td>7286</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42</th>\n",
+       "      <td>Q2 '10</td>\n",
+       "      <td>6820</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43</th>\n",
+       "      <td>Q1 '10</td>\n",
+       "      <td>6775</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44</th>\n",
+       "      <td>Q4 '09</td>\n",
+       "      <td>6674</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45</th>\n",
+       "      <td>Q3 '09</td>\n",
+       "      <td>5945</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46</th>\n",
+       "      <td>Q2 '09</td>\n",
+       "      <td>5523</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>47</th>\n",
+       "      <td>Q1 '09</td>\n",
+       "      <td>5509</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48</th>\n",
+       "      <td>Q4 '08</td>\n",
+       "      <td>5701</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49</th>\n",
+       "      <td>Q3 '08</td>\n",
+       "      <td>5541</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50</th>\n",
+       "      <td>Q2 '08</td>\n",
+       "      <td>5637</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>51</th>\n",
+       "      <td>Q1 '08</td>\n",
+       "      <td>5186</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0  Revenue in million U.S. dollars\n",
+       "0      Q4 '20                            56704\n",
+       "1      Q3 '20                            46017\n",
+       "2      Q2 '20                            37998\n",
+       "3      Q1 '20                            40975\n",
+       "4      Q4 '19                            45812\n",
+       "5      Q3 '19                            40225\n",
+       "6      Q2 '19                            38674\n",
+       "7      Q1 '19                            36032\n",
+       "8      Q4 '18                            38998\n",
+       "9      Q3 '18                            33594\n",
+       "10     Q2 '18                            32512\n",
+       "11     Q1 '18                            30996\n",
+       "12     Q4 '17                            32192\n",
+       "13     Q3 '17                            27470\n",
+       "14     Q2 '17                            25913\n",
+       "15     Q1 '17                            24618\n",
+       "16     Q4 '16                            25802\n",
+       "17     Q3 '16                            22254\n",
+       "18     Q2 '16                            21315\n",
+       "19     Q1 '16                            20092\n",
+       "20     Q4 '15                            21179\n",
+       "21     Q3 '15                            18534\n",
+       "22     Q2 '15                            17653\n",
+       "23     Q1 '15                            17178\n",
+       "24     Q4 '14                            17997\n",
+       "25     Q3 '14                            16523\n",
+       "26     Q2 '14                            15955\n",
+       "27     Q1 '14                            15420\n",
+       "28     Q4 '13                            15707\n",
+       "29     Q3 '13                            13754\n",
+       "30     Q2 '13                            13107\n",
+       "31     Q1 '13                            12951\n",
+       "32     Q4 '12                            12905\n",
+       "33     Q3 '12                            11526\n",
+       "34     Q2 '12                            10964\n",
+       "35     Q1 '12                            10645\n",
+       "36     Q4 '11                            10584\n",
+       "37     Q3 '11                             9720\n",
+       "38     Q2 '11                             9026\n",
+       "39     Q1 '11                             8575\n",
+       "40     Q4 '10                             8440\n",
+       "41     Q3 '10                             7286\n",
+       "42     Q2 '10                             6820\n",
+       "43     Q1 '10                             6775\n",
+       "44     Q4 '09                             6674\n",
+       "45     Q3 '09                             5945\n",
+       "46     Q2 '09                             5523\n",
+       "47     Q1 '09                             5509\n",
+       "48     Q4 '08                             5701\n",
+       "49     Q3 '08                             5541\n",
+       "50     Q2 '08                             5637\n",
+       "51     Q1 '08                             5186"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "google_quarter2 = pd.read_html(googleurl2)[0]\n",
+    "google_quarter2"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
