fixed employee dataframe

--- a/Stocks/Creating Classes.ipynb
+++ b/Stocks/Creating Classes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,25 +55,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Employee_numbers', 'offices', 'stocks']"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "Base.classes.keys()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Stocks =Base.classes.fang_stocks_2018_2020"
+    "Stocks =Base.classes.stocks"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "offices = Base.classes.offices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "employees = Base.classes.Employee_numbers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,11 +111,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'_sa_instance_state': <sqlalchemy.orm.state.InstanceState at 0x195bd7a2908>,\n",
+       " 'Open': 1172.0,\n",
+       " 'index': 0,\n",
+       " 'Low': 1170.51001,\n",
+       " 'Adj_Close': 1189.01001,\n",
+       " 'Ticker': 'AMZN',\n",
+       " 'Date': datetime.datetime(2018, 1, 2, 0, 0),\n",
+       " 'High': 1190.0,\n",
+       " 'Volume': 2694500}"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "record=session.query(Stocks).first()\n",
+    "record.__dict__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'_sa_instance_state': <sqlalchemy.orm.state.InstanceState at 0x195bd7ad108>,\n",
+       " 'Office': 'Cupertino',\n",
+       " 'Company': 'Apple',\n",
+       " 'Longitude': -122.0146156,\n",
+       " 'Latitude': 37.33556016,\n",
+       " 'Country': 'United States',\n",
+       " 'index': 0}"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "record=session.query(offices).first()\n",
+    "record.__dict__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'_sa_instance_state': <sqlalchemy.orm.state.InstanceState at 0x195bd7b5b88>,\n",
+       " 'Company': 'Microsoft',\n",
+       " '2006': 71000.0,\n",
+       " '2008': 91000.0,\n",
+       " '2010': 89000.0,\n",
+       " '2011': 90000,\n",
+       " '2013': 99000,\n",
+       " '2015': 118000,\n",
+       " '2017': 124000,\n",
+       " '2019': 144000,\n",
+       " '2005': 61000.0,\n",
+       " '2007': 79000.0,\n",
+       " 'index': 0,\n",
+       " '2009': 93000.0,\n",
+       " '2012': 94000,\n",
+       " '2014': 128000,\n",
+       " '2016': 114000,\n",
+       " '2018': 131000,\n",
+       " '2020': 163000}"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "record=session.query(employees).first()\n",
     "record.__dict__"
    ]
   },
