--- a/office_locations/Office_Locations_final_df.ipynb
+++ b/office_locations/Office_Locations_final_df.ipynb
@@ -1013,7 +1013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1023,9 +1023,165 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>Office</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Company</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Cupertino</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>Apple</td>\n",
+       "      <td>37.335560</td>\n",
+       "      <td>-122.014616</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Austin</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>Apple</td>\n",
+       "      <td>30.434736</td>\n",
+       "      <td>-97.734340</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Cupertino</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>Apple</td>\n",
+       "      <td>37.332041</td>\n",
+       "      <td>-122.029597</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Sydney</td>\n",
+       "      <td>Australia</td>\n",
+       "      <td>Apple</td>\n",
+       "      <td>-33.867097</td>\n",
+       "      <td>151.208785</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Toronto</td>\n",
+       "      <td>Canada</td>\n",
+       "      <td>Apple</td>\n",
+       "      <td>43.643140</td>\n",
+       "      <td>-79.383077</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>620</th>\n",
+       "      <td>620</td>\n",
+       "      <td>India</td>\n",
+       "      <td>India</td>\n",
+       "      <td>Netflix</td>\n",
+       "      <td>19.992861</td>\n",
+       "      <td>72.716200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>621</th>\n",
+       "      <td>621</td>\n",
+       "      <td>Seoul</td>\n",
+       "      <td>Korea</td>\n",
+       "      <td>Netflix</td>\n",
+       "      <td>37.571539</td>\n",
+       "      <td>126.983230</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>622</th>\n",
+       "      <td>622</td>\n",
+       "      <td>Tokyo</td>\n",
+       "      <td>Japan</td>\n",
+       "      <td>Netflix</td>\n",
+       "      <td>35.666616</td>\n",
+       "      <td>139.713941</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>623</th>\n",
+       "      <td>623</td>\n",
+       "      <td>Turkey</td>\n",
+       "      <td>Turkey</td>\n",
+       "      <td>Netflix</td>\n",
+       "      <td>38.441295</td>\n",
+       "      <td>27.181219</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>624</th>\n",
+       "      <td>624</td>\n",
+       "      <td>Rome</td>\n",
+       "      <td>Italy</td>\n",
+       "      <td>Netflix</td>\n",
+       "      <td>41.908341</td>\n",
+       "      <td>12.493059</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>625 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     index     Office        Country  Company   Latitude   Longitude\n",
+       "0        0  Cupertino  United States    Apple  37.335560 -122.014616\n",
+       "1        1     Austin  United States    Apple  30.434736  -97.734340\n",
+       "2        2  Cupertino  United States    Apple  37.332041 -122.029597\n",
+       "3        3     Sydney      Australia    Apple -33.867097  151.208785\n",
+       "4        4    Toronto         Canada    Apple  43.643140  -79.383077\n",
+       "..     ...        ...            ...      ...        ...         ...\n",
+       "620    620      India          India  Netflix  19.992861   72.716200\n",
+       "621    621      Seoul          Korea  Netflix  37.571539  126.983230\n",
+       "622    622      Tokyo          Japan  Netflix  35.666616  139.713941\n",
+       "623    623     Turkey         Turkey  Netflix  38.441295   27.181219\n",
+       "624    624       Rome          Italy  Netflix  41.908341   12.493059\n",
+       "\n",
+       "[625 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Pull the from the SQl website to verify it is there\n",
     "offices = pd.read_sql(\"SELECT * FROM offices\", con=engine)\n",
