--- a/Stocks/Creating Classes.ipynb
+++ b/Stocks/Creating Classes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,16 +55,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Employee_numbers', 'offices', 'stocks']"
+       "['Employee_numbers', 'offices', 'employees', 'stocks']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,16 +93,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "employees = Base.classes.Employee_numbers"
+    "employees = Base.classes.employees"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,24 +111,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'_sa_instance_state': <sqlalchemy.orm.state.InstanceState at 0x195bd7a2908>,\n",
-       " 'Open': 1172.0,\n",
-       " 'index': 0,\n",
-       " 'Low': 1170.51001,\n",
-       " 'Adj_Close': 1189.01001,\n",
-       " 'Ticker': 'AMZN',\n",
+       "{'_sa_instance_state': <sqlalchemy.orm.state.InstanceState at 0x218877c84c8>,\n",
        " 'Date': datetime.datetime(2018, 1, 2, 0, 0),\n",
        " 'High': 1190.0,\n",
+       " 'Adj_Close': 1189.01001,\n",
+       " 'Ticker': 'AMZN',\n",
+       " 'Low': 1170.51001,\n",
+       " 'index': 0,\n",
+       " 'Open': 1172.0,\n",
        " 'Volume': 2694500}"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,13 +146,13 @@
     {
      "data": {
       "text/plain": [
-       "{'_sa_instance_state': <sqlalchemy.orm.state.InstanceState at 0x195bd7ad108>,\n",
+       "{'_sa_instance_state': <sqlalchemy.orm.state.InstanceState at 0x218877d0708>,\n",
+       " 'Country': 'United States',\n",
+       " 'index': 0,\n",
+       " 'Latitude': 37.33556016,\n",
        " 'Office': 'Cupertino',\n",
        " 'Company': 'Apple',\n",
-       " 'Longitude': -122.0146156,\n",
-       " 'Latitude': 37.33556016,\n",
-       " 'Country': 'United States',\n",
-       " 'index': 0}"
+       " 'Longitude': -122.0146156}"
       ]
      },
      "execution_count": 21,
@@ -167,34 +167,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'_sa_instance_state': <sqlalchemy.orm.state.InstanceState at 0x195bd7b5b88>,\n",
+       "{'_sa_instance_state': <sqlalchemy.orm.state.InstanceState at 0x218877d4308>,\n",
+       " 'Number_of_Employees': 61000.0,\n",
        " 'Company': 'Microsoft',\n",
-       " '2006': 71000.0,\n",
-       " '2008': 91000.0,\n",
-       " '2010': 89000.0,\n",
-       " '2011': 90000,\n",
-       " '2013': 99000,\n",
-       " '2015': 118000,\n",
-       " '2017': 124000,\n",
-       " '2019': 144000,\n",
-       " '2005': 61000.0,\n",
-       " '2007': 79000.0,\n",
        " 'index': 0,\n",
-       " '2009': 93000.0,\n",
-       " '2012': 94000,\n",
-       " '2014': 128000,\n",
-       " '2016': 114000,\n",
-       " '2018': 131000,\n",
-       " '2020': 163000}"
+       " 'Year': 2005}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,11 +192,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2018-01-02 00:00:00 1189.01001 AMZN\n",
+      "2018-01-03 00:00:00 1204.199951 AMZN\n",
+      "2018-01-04 00:00:00 1209.589966 AMZN\n",
+      "2018-01-05 00:00:00 1229.140015 AMZN\n",
+      "2018-01-08 00:00:00 1246.869995 AMZN\n",
+      "2018-01-09 00:00:00 1252.699951 AMZN\n",
+      "2018-01-10 00:00:00 1254.329956 AMZN\n",
+      "2018-01-11 00:00:00 1276.680054 AMZN\n",
+      "2018-01-12 00:00:00 1305.199951 AMZN\n",
+      "2018-01-16 00:00:00 1304.859985 AMZN\n",
+      "2018-01-17 00:00:00 1295.0 AMZN\n",
+      "2018-01-18 00:00:00 1293.319946 AMZN\n",
+      "2018-01-19 00:00:00 1294.579956 AMZN\n",
+      "2018-01-22 00:00:00 1327.310059 AMZN\n",
+      "2018-01-23 00:00:00 1362.540039 AMZN\n",
+      "2018-01-24 00:00:00 1357.51001 AMZN\n",
+      "2018-01-25 00:00:00 1377.949951 AMZN\n",
+      "2018-01-26 00:00:00 1402.050049 AMZN\n",
+      "2018-01-29 00:00:00 1417.680054 AMZN\n",
+      "2018-01-30 00:00:00 1437.819946 AMZN\n",
+      "2018-01-31 00:00:00 1450.890015 AMZN\n",
+      "2018-02-01 00:00:00 1390.0 AMZN\n",
+      "2018-02-02 00:00:00 1429.949951 AMZN\n",
+      "2018-02-05 00:00:00 1390.0 AMZN\n",
+      "2018-02-06 00:00:00 1442.839966 AMZN\n",
+      "2018-02-07 00:00:00 1416.780029 AMZN\n",
+      "2018-02-08 00:00:00 1350.5 AMZN\n",
+      "2018-02-09 00:00:00 1339.599976 AMZN\n",
+      "2018-02-12 00:00:00 1386.22998 AMZN\n",
+      "2018-02-13 00:00:00 1414.51001 AMZN\n",
+      "2018-02-14 00:00:00 1451.050049 AMZN\n",
+      "2018-02-15 00:00:00 1461.76001 AMZN\n",
+      "2018-02-16 00:00:00 1448.689941 AMZN\n",
+      "2018-02-20 00:00:00 1468.349976 AMZN\n",
+      "2018-02-21 00:00:00 1482.920044 AMZN\n",
+      "2018-02-22 00:00:00 1485.339966 AMZN\n",
+      "2018-02-23 00:00:00 1500.0 AMZN\n",
+      "2018-02-26 00:00:00 1521.949951 AMZN\n",
+      "2018-02-27 00:00:00 1511.97998 AMZN\n",
+      "2018-02-28 00:00:00 1512.449951 AMZN\n",
+      "2018-03-01 00:00:00 1493.449951 AMZN\n",
+      "2018-03-02 00:00:00 1500.25 AMZN\n",
+      "2018-03-05 00:00:00 1523.609985 AMZN\n",
+      "2018-03-06 00:00:00 1537.640015 AMZN\n",
+      "2018-03-07 00:00:00 1545.0 AMZN\n",
+      "2018-03-08 00:00:00 1551.859985 AMZN\n",
+      "2018-03-09 00:00:00 1578.890015 AMZN\n",
+      "2018-03-12 00:00:00 1598.390015 AMZN\n",
+      "2018-03-13 00:00:00 1588.180054 AMZN\n",
+      "2018-03-14 00:00:00 1591.0 AMZN\n"
+     ]
+    }
+   ],
    "source": [
-    "for row in session.query(Stocks).limit(100).all():\n",
+    "for row in session.query(Stocks).limit(50).all():\n",
     "    print(row.Date, row.Adj_Close, row.Ticker)"
    ]
   },
@@ -220,16 +263,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sqlalchemy import inspect"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "inspector = inspect(engine)"
+    "for row in session.query(employees).limit(50).all():\n",
+    "    print()"
    ]
   },
   {
@@ -270,12 +305,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "61000.0 Microsoft 2005\n",
+      "12000.0 Amazon 2005\n",
+      "5680.0 Google 2005\n",
+      "None Facebook 2005\n",
+      "985.0 Netflix 2005\n",
+      "16820.0 Apple  2005\n",
+      "71000.0 Microsoft 2006\n",
+      "13900.0 Amazon 2006\n",
+      "10674.0 Google 2006\n",
+      "None Facebook 2006\n",
+      "1300.0 Netflix 2006\n",
+      "20186.0 Apple  2006\n",
+      "79000.0 Microsoft 2007\n",
+      "17000.0 Amazon 2007\n",
+      "16805.0 Google 2007\n",
+      "None Facebook 2007\n",
+      "1542.0 Netflix 2007\n",
+      "23700.0 Apple  2007\n",
+      "91000.0 Microsoft 2008\n",
+      "20700.0 Amazon 2008\n",
+      "20222.0 Google 2008\n",
+      "None Facebook 2008\n",
+      "1644.0 Netflix 2008\n",
+      "35100.0 Apple  2008\n",
+      "93000.0 Microsoft 2009\n",
+      "24300.0 Amazon 2009\n",
+      "19835.0 Google 2009\n",
+      "None Facebook 2009\n",
+      "1883.0 Netflix 2009\n",
+      "36800.0 Apple  2009\n",
+      "89000.0 Microsoft 2010\n",
+      "33700.0 Amazon 2010\n",
+      "24000.0 Google 2010\n",
+      "None Facebook 2010\n",
+      "2180.0 Netflix 2010\n",
+      "49400.0 Apple  2010\n",
+      "90000.0 Microsoft 2011\n",
+      "56200.0 Amazon 2011\n",
+      "32467.0 Google 2011\n",
+      "3200.0 Facebook 2011\n",
+      "2348.0 Netflix 2011\n",
+      "63300.0 Apple  2011\n",
+      "94000.0 Microsoft 2012\n",
+      "88400.0 Amazon 2012\n",
+      "53861.0 Google 2012\n",
+      "4619.0 Facebook 2012\n",
+      "2045.0 Netflix 2012\n",
+      "76100.0 Apple  2012\n",
+      "99000.0 Microsoft 2013\n",
+      "117300.0 Amazon 2013\n",
+      "47756.0 Google 2013\n",
+      "6337.0 Facebook 2013\n",
+      "2022.0 Netflix 2013\n",
+      "84400.0 Apple  2013\n",
+      "128000.0 Microsoft 2014\n",
+      "154100.0 Amazon 2014\n",
+      "53600.0 Google 2014\n",
+      "9199.0 Facebook 2014\n",
+      "2189.0 Netflix 2014\n",
+      "97000.0 Apple  2014\n",
+      "118000.0 Microsoft 2015\n",
+      "230800.0 Amazon 2015\n",
+      "61814.0 Google 2015\n",
+      "12691.0 Facebook 2015\n",
+      "3700.0 Netflix 2015\n",
+      "110000.0 Apple  2016\n",
+      "114000.0 Microsoft 2016\n",
+      "341400.0 Amazon 2016\n",
+      "72053.0 Google 2016\n",
+      "17048.0 Facebook 2016\n",
+      "4700.0 Netflix 2016\n",
+      "116000.0 Apple  2016\n",
+      "124000.0 Microsoft 2017\n",
+      "566000.0 Amazon 2017\n",
+      "80110.0 Google 2017\n",
+      "25105.0 Facebook 2017\n",
+      "5500.0 Netflix 2017\n",
+      "123000.0 Apple  2017\n",
+      "131000.0 Microsoft 2018\n",
+      "647500.0 Amazon 2018\n",
+      "98771.0 Google 2018\n",
+      "35587.0 Facebook 2018\n",
+      "7300.0 Netflix 2018\n",
+      "132000.0 Apple  2018\n",
+      "144000.0 Microsoft 2019\n",
+      "798000.0 Amazon 2019\n",
+      "118899.0 Google 2019\n",
+      "44942.0 Facebook 2019\n",
+      "8600.0 Netflix 2019\n",
+      "137000.0 Apple  2019\n",
+      "163000.0 Microsoft 2020\n",
+      "1298000.0 Amazon 2020\n",
+      "235301.0 Google 2020\n",
+      "58604.0 Facebook 2020\n",
+      "9400.0 Netflix 2020\n",
+      "147000.0 Apple  2020\n"
+     ]
+    }
+   ],
    "source": [
-    "for row in session.query(offices).all():\n",
-    "    print(row.Company)"
+    "for row in session.query(employees).all():\n",
+    "    print( row.Number_of_Employees,row.Company,row.Year)"
    ]
   },
   {
